Pages now short their entries based on the Primary Key.